--- a/_posts/2019-08-26-prebid-3.0.md
+++ b/_posts/2019-08-26-prebid-3.0.md
@@ -14,6 +14,8 @@ The Prebid core team is working on a major release for 3.0. The main items to be
 
 * Upgrade all bidder adapters to HTTPS all the time. 
 * Misc legacy APIs and functions (should be a minor publisher impact) -  [see here](https://github.com/prebid/Prebid.js/issues/4118)
+* Unbundle PubCommon ID and Unified ID from the User ID module build (link TBD)
+* Fix for `getHighestCpmBids` to not return renderered bids [issue link](https://github.com/prebid/Prebid.js/issues/2959)
 * Tentative: Update to size config feature (Some breaking changes in behavior that publisher will want to review)
   
 ### Bidder compliance with 3.0
