event is a meetup and a summit

--- a/_posts/2019-09-17-sfevent.md
+++ b/_posts/2019-09-17-sfevent.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Prebid Leadership Summit in San Francisco on Oct 24th 2019
+title: Prebid Meetup and Leadership Summit in San Francisco on Oct 24th 2019
 permalink: /blog/2019-sf-event
 ---
 
 <br>
 
-### Prebid Leadership Summit in San Francisco on Oct 24th 2019
+### Prebid Meetup and Leadership Summit in San Francisco on Oct 24th 2019
 
 Prebid.org invites you to attend a Prebid Meetup and Leadership Summit in
 San Francisco on October 24, 2019. Our event will be at the historic
