--- a/_posts/2019-08-26-prebid-3.0.md
+++ b/_posts/2019-08-26-prebid-3.0.md
@@ -2,7 +2,7 @@
 layout: post
 title: Prebid.js 3.0 major release announcement
 description: 
-permalink: /blog/pbjs-2
+permalink: /blog/pbjs-3
 ---
 
 
@@ -10,24 +10,33 @@ permalink: /blog/pbjs-2
 
 ## Prebid.js 3.0 major release announcement
 
-The Prebid core team is working on a major release for 3.0. The main items to be included in this release currently:
+The Prebid core team is excited to announce a major Prebid.js release, 3.0! The main items to be included in this release are as follows:
 
 * Upgrade all bidder adapters to HTTPS all the time. 
-* Misc legacy APIs and functions (should be a minor publisher impact) -  [see here](https://github.com/prebid/Prebid.js/issues/4118)
-* Unbundle PubCommon ID and Unified ID from the User ID module build (link TBD)
-* Fix for `getHighestCpmBids` to not return renderered bids [issue link](https://github.com/prebid/Prebid.js/issues/2959)
-* Tentative: Update to size config feature (Some breaking changes in behavior that publisher will want to review)
-  
-### Bidder compliance with 3.0
+* Misc legacy APIs and functions will be removed (should be a minor publisher impact) -  [link](https://github.com/prebid/Prebid.js/issues/4118)
+* Unbundle PubCommon ID and Unified ID from the User ID module build
+* Fix for `getHighestCpmBids` to not return renderered bids [link](https://github.com/prebid/Prebid.js/issues/2959)
+* Remove the legacy PBS adapter endpoint support [link](https://github.com/prebid/Prebid.js/issues/4172)
+* Improve caching behavior if enabled [link](https://github.com/prebid/Prebid.js/issues/4148)
 
-We ask all bidder adapters to ensure they are compliant with secure requests to their endpoints (HTTPS) since it is already a requirement for bidders to support it on secure pages this should hopefully not be a big issue. The prebid core team will automatically update all the endpoints to secure if they are not already for the 3.0 release. 
+You can see the full list of items that are associated with the 3.0 release [here](https://github.com/prebid/Prebid.js/labels/3.0%20API%20Change) 
+
+### Adapter maintainers action required
+
+#### Ensure your bidder doesn't use deprecated functions
 
 **Referrer detection and related code**
 
 Bidder adapters should review their implementation to see if they are relying on getting referrer information from updated APIs in `utils.js` and instead use the new [referrer methods](http://prebid.org/dev-docs/bidder-adaptor.html#referrers) on the bid request (`bidderRequest.refererInfo`).
 
-### Size Mapping feature
-TBD
+**Important**
+If you are using a deprecated function, your bidder adapter will be removed from the 3.0 branch. You will need to re-submit compliant code. Please target re-submission by Nov 1st 2019. This will give enough time for the core team to review and target the release of mid November. 
+
+  
+#### Verify bidder supports HTTPS
+
+We ask all bidder adapters to ensure they are compliant with secure requests to their endpoints (HTTPS) since it is already a requirement for bidders to support it on secure pages this should hopefully not be a big issue. The prebid core team will automatically update all the endpoints to secure if they are not already for the 3.0 release. 
+
 
 ### Target release date
-Q4 2019 (to be refined as scope is finalized)
+Mid November 2019 
