Added link for pub API changes

--- a/_posts/2019-08-26-prebid-3.0.md
+++ b/_posts/2019-08-26-prebid-3.0.md
@@ -2,7 +2,7 @@
 layout: post
 title: Prebid.js 3.0 major release announcement
 description: 
-permalink: /blog/pbjs-3
+cd ..permalink: /blog/pbjs-3
 ---
 
 
@@ -20,6 +20,11 @@ The Prebid core team is excited to announce a major Prebid.js release, 3.0! The 
 * Improve caching behavior if enabled [link](https://github.com/prebid/Prebid.js/issues/4148)
 
 You can see the full list of items that are associated with the 3.0 release [here](https://github.com/prebid/Prebid.js/labels/3.0%20API%20Change) 
+
+### Publisher facing API Changes
+
+Please review this [link to see all the Publisher API changes](
+https://github.com/prebid/Prebid.js/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3A%22Pub+API+Change%22+label%3A%223.0+API+Change%22+)
 
 ### Adapter maintainers action required
 
