highlighting publisher changes

--- a/_posts/2019-08-26-prebid-3.0.md
+++ b/_posts/2019-08-26-prebid-3.0.md
@@ -23,7 +23,86 @@ You can see the full list of items that are associated with the 3.0 release [her
 
 ### Publisher facing API Changes
 
-Please review this [link to see all the Publisher API changes](
+#### 1. AdUnit.sizes can no longer be used
+
+To upgrade to Prebid.js 3.0, you'll need to make sure that ad sizes are in mediaTypes.banner.sizes.
+
+i.e. instead of
+```
+    var adUnits = [
+           {
+               code: 'test-div',
+               sizes: [[300,250],[300,600]],
+```
+You will need to modify adunits to:
+```
+    var adUnits = [
+           {
+               code: 'test-div',
+                mediaTypes: {
+                    banner: {
+                        sizes: [[300,250],[300,600]]
+                    }
+                },
+```
+
+#### 2. The usersync API no longer supports iframeEnabled, pixelEnabled, or enabledBIdders
+
+There has been a much more flexible syntax for usersync available for a long time now. See the [Publisher API docs](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Configure-User-Syncing) for more details, but here's an example of the improve syntax:
+
+```
+pbjs.setConfig({
+    userSync: {
+        filterSettings: {
+            iframe: {
+                bidders: ['def'],  // only this bidder is excluded from syncing iframe pixels, all other bidders are allowed
+                filter: 'exclude'
+            },
+            image: {
+                bidders: ['abc', 'def', 'xyz'],  //only these 3 bidders are allowed to sync image pixels
+                filter: 'include'
+            }
+        },
+        syncsPerBidder: 3, // and no more than 3 syncs at a time
+        syncDelay: 6000, // 6 seconds after the auction
+    }
+});
+```
+
+#### 3. Remove legacy protocol support for Prebid Server
+
+You will need to check the s2sConfig.endpoint defined for Prebid Server. If it's `/auction`, you'll need to change to `/openrtb2/auction`. No other changes are necessary, but you should test the change with your Prebid Server provider.
+
+#### 4. pbjs.loadScript() is gone
+
+If you happen to be using this ancient function, you'll need to find an alternative.
+
+#### 5. Be aware that the getHighestCpmBids() function will no longer return already-rendered bids
+
+This is a bug that some of you may have implemented workarounds for. More details [here](https://github.com/prebid/Prebid.js/issues/2959).
+
+#### 6. The 'min' attribute is no longer used on a [pricegranularity](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Price-Granularity)
+
+The existence of the 'min' attribute should not harm existing pricegranularities, but if anyone's defined pricegranularities with gaps between the buckets, those won't work anymore.
+
+e.g. this is no longer possible. It's unclear to us why anyone would need this:
+
+```
+const customConfigObject = {
+  "buckets" : [{
+      "min" : 0,
+      "max" : 5,
+      "increment" : 0.01
+    },
+    {
+      "min" : 5.25,             // ignore bids between $5 and $5.25
+      "max" : 10,
+      "increment" : 0.05
+    }]
+};
+```
+
+Implementation details for all Publisher-facing changes are [here](
 https://github.com/prebid/Prebid.js/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3A%22Pub+API+Change%22+label%3A%223.0+API+Change%22+)
 
 ### Adapter maintainers action required
