--- a/_posts/2019-08-26-prebid-3.0.md
+++ b/_posts/2019-08-26-prebid-3.0.md
@@ -8,8 +8,6 @@ cd ..permalink: /blog/pbjs-3
 
 <br>
 
-## Prebid.js 3.0 major release announcement
-
 The Prebid core team is excited to announce a major Prebid.js release, 3.0! The main items to be included in this release are as follows:
 
 * Upgrade all bidder adapters to HTTPS all the time. 
@@ -102,12 +100,21 @@ const customConfigObject = {
 };
 ```
 
+#### 7. Specifically pull PubCommon ID and Unified ID into your build
+
+In previous versions, PubCommon ID and Unified ID were automatically
+included as part of your Prebid.js build when you included the [userId module.](/modules/userId.html)
+
+This is no longer the case -- in order for a Prebid.js package to include PubCommon ID and Unified ID, the `gulp build` command will need to specifically include them.
+
+#### More details
+
 Implementation details for all Publisher-facing changes are [here](
 https://github.com/prebid/Prebid.js/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3A%22Pub+API+Change%22+label%3A%223.0+API+Change%22+)
 
 ### Adapter maintainers action required
 
-#### Ensure your bidder doesn't use deprecated functions
+#### 1. Ensure your bidder doesn't use deprecated functions
 
 **Referrer detection and related code**
 
@@ -117,9 +124,15 @@ Bidder adapters should review their implementation to see if they are relying on
 If you are using a deprecated function, your bidder adapter will be removed from the 3.0 branch. You will need to re-submit compliant code. Please target re-submission by Nov 1st 2019. This will give enough time for the core team to review and target the release of mid November. 
 
   
-#### Verify bidder supports HTTPS
+#### 2. Verify bidder supports HTTPS
 
 We ask all bidder adapters to ensure they are compliant with secure requests to their endpoints (HTTPS) since it is already a requirement for bidders to support it on secure pages this should hopefully not be a big issue. The prebid core team will automatically update all the endpoints to secure if they are not already for the 3.0 release. 
+
+#### 3. Verify adapter reads sizes from mediaTypes.banner.sizes
+
+We are telling pubs that they need to configm that their adunits define sizes in `mediaTypes.banner.sizes` instead of just `sizes`.
+
+Adapter code and examples must be updated to reflect this change.
 
 
 ### Target release date
