--- a/_posts/2019-10-07-prebid-3.0.md
+++ b/_posts/2019-10-07-prebid-3.0.md
@@ -1,38 +1,40 @@
 ---
 layout: post
-title: Prebid.js 3.0 major release announcement
-description: 
+title: Prebid.js 3.0 Major Release Announcement
+description:
 cd ..permalink: /blog/pbjs-3
 ---
 
 
 <br>
 
-The Prebid core team is excited to announce a major Prebid.js release, 3.0! The main items to be included in this release are as follows:
+The Prebid core team is excited to announce a major release: Prebid.js 3.0! Here are the main items that will be included in this release:
 
-* Upgrade all bidder adapters to HTTPS all the time. 
-* Misc legacy APIs and functions will be removed (should be a minor publisher impact) -  [link](https://github.com/prebid/Prebid.js/issues/4118)
-* Unbundle PubCommon ID and Unified ID from the User ID module build
-* Fix for `getHighestCpmBids` to not return renderered bids [link](https://github.com/prebid/Prebid.js/issues/2959)
-* Remove the legacy PBS adapter endpoint support [link](https://github.com/prebid/Prebid.js/issues/4172)
-* Improve caching behavior if enabled [link](https://github.com/prebid/Prebid.js/issues/4148)
+* Upgrade all bidder adapters to HTTPS all the time.
+* Removal of miscellaneous legacy APIs and functions (should be a minor publisher impact). ([Issue 4118](https://github.com/prebid/Prebid.js/issues/4118))
+* Unbundle PubCommon ID and Unified ID from the User ID module build.
+* Fix for `getHighestCpmBids` to not return rendered bids. ([Issue 2959](https://github.com/prebid/Prebid.js/issues/2959))
+* Remove the legacy PBS adapter endpoint support. ([Issue 4172](https://github.com/prebid/Prebid.js/issues/4172))
+* Improve caching behavior if enabled. ([Issue 4148](https://github.com/prebid/Prebid.js/issues/4148))
 
-You can see the full list of items that are associated with the 3.0 release [here](https://github.com/prebid/Prebid.js/labels/3.0%20API%20Change) 
+[See the full list](https://github.com/prebid/Prebid.js/labels/3.0%20API%20Change) of items that are associated with the 3.0 release.
 
-### Publisher facing API Changes
+### Publisher-facing API Changes
+
+Review these changes to make sure you're ready to upgrade to 3.0.
 
 #### 1. AdUnit.sizes can no longer be used
 
 To upgrade to Prebid.js 3.0, you'll need to make sure that ad sizes are in mediaTypes.banner.sizes.
 
-i.e. instead of
+For example, instead of including sizes like this:
 ```
     var adUnits = [
            {
                code: 'test-div',
                sizes: [[300,250],[300,600]],
 ```
-You will need to modify adunits to:
+You will need to define adUnits sizes like this:
 ```
     var adUnits = [
            {
@@ -44,9 +46,9 @@ You will need to modify adunits to:
                 },
 ```
 
-#### 2. The usersync API no longer supports iframeEnabled, pixelEnabled, or enabledBIdders
+#### 2. The userSync API no longer supports iframeEnabled, pixelEnabled, or enabledBidders
 
-There has been a much more flexible syntax for usersync available for a long time now. See the [Publisher API docs](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Configure-User-Syncing) for more details, but here's an example of the improve syntax:
+There has been a much more flexible syntax for userSync available for a long time, and it's what you need to be using now. See the [Publisher API docs](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Configure-User-Syncing) for more details, but here's an example of the improved syntax:
 
 ```
 pbjs.setConfig({
@@ -57,7 +59,7 @@ pbjs.setConfig({
                 filter: 'exclude'
             },
             image: {
-                bidders: ['abc', 'def', 'xyz'],  //only these 3 bidders are allowed to sync image pixels
+                bidders: ['abc', 'def', 'xyz'],  // only these 3 bidders are allowed to sync image pixels
                 filter: 'include'
             }
         },
@@ -79,11 +81,11 @@ If you happen to be using this ancient function, you'll need to find an alternat
 
 This is a bug that some of you may have implemented workarounds for. More details [here](https://github.com/prebid/Prebid.js/issues/2959).
 
-#### 6. The 'min' attribute is no longer used on a [pricegranularity](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Price-Granularity)
+#### 6. The 'min' attribute is no longer used on [pricegranularity](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Price-Granularity)
 
-The existence of the 'min' attribute should not harm existing pricegranularities, but if anyone's defined pricegranularities with gaps between the buckets, those won't work anymore.
+The existence of the 'min' attribute should not harm existing price granularities, but if anyone has defined price granularities with gaps between the buckets, they won't work anymore.
 
-e.g. this is no longer possible. It's unclear to us why anyone would need this:
+For example, this is no longer possible. (It's unclear to us why anyone would need this.)
 
 ```
 const customConfigObject = {
@@ -103,37 +105,40 @@ const customConfigObject = {
 #### 7. Specifically pull PubCommon ID and Unified ID into your build
 
 In previous versions, PubCommon ID and Unified ID were automatically
-included as part of your Prebid.js build when you included the [userId module.](/modules/userId.html)
+included as part of your Prebid.js build when you included the [userId module](/modules/userId.html).
 
-This is no longer the case -- in order for a Prebid.js package to include PubCommon ID and Unified ID, the `gulp build` command will need to specifically include them.
+This is no longer the case; in order for a Prebid.js package to include PubCommon ID and Unified ID, the `gulp build` command will need to specifically include them.
 
 #### More details
 
 Implementation details for all Publisher-facing changes are [here](
 https://github.com/prebid/Prebid.js/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen+label%3A%22Pub+API+Change%22+label%3A%223.0+API+Change%22+)
 
-### Adapter maintainers action required
+### Adapter Maintainers Action Required
+
+If you're responsible for any adapters, be sure you've taken the actions outlined here.
 
 #### 1. Ensure your bidder doesn't use deprecated functions
 
 **Referrer detection and related code**
 
-Bidder adapters should review their implementation to see if they are relying on getting referrer information from updated APIs in `utils.js` and instead use the new [referrer methods](http://prebid.org/dev-docs/bidder-adaptor.html#referrers) on the bid request (`bidderRequest.refererInfo`).
+Bidder adapters should review their implementation to see if they are relying on getting referrer information from updated APIs in `utils.js`. If they are, they should instead use the new [referrer methods](http://prebid.org/dev-docs/bidder-adaptor.html#referrers) on the bid request (`bidderRequest.refererInfo`).
 
 **Important**
-If you are using a deprecated function, your bidder adapter will be removed from the 3.0 branch. You will need to re-submit compliant code. Please target re-submission by Nov 1st 2019. This will give enough time for the core team to review and target the release of mid November. 
+If you are using a deprecated function, your bidder adapter will be removed from the 3.0 branch. You will need to re-submit compliant code. Please target re-submission by *November 1, 2019*. This will give enough time for the core team to review and target the release of mid November.
 
-  
+
 #### 2. Verify bidder supports HTTPS
 
-We ask all bidder adapters to ensure they are compliant with secure requests to their endpoints (HTTPS) since it is already a requirement for bidders to support it on secure pages this should hopefully not be a big issue. The prebid core team will automatically update all the endpoints to secure if they are not already for the 3.0 release. 
+We ask all bidder adapters to ensure they are compliant with secure requests to their endpoints (HTTPS). It is already a requirement for bidders to support it on secure pages, so hopefully this will not be a big issue. For the 3.0 release the Prebid core team will automatically update all the endpoints to secure if they are not already updated.
 
 #### 3. Verify adapter reads sizes from mediaTypes.banner.sizes
 
-We are telling pubs that they need to configm that their adunits define sizes in `mediaTypes.banner.sizes` instead of just `sizes`.
+We are telling pubs that they need to confirm that their adUnits define sizes in `mediaTypes.banner.sizes` instead of just `sizes`.
 
 Adapter code and examples must be updated to reflect this change.
 
 
 ### Target release date
-Mid November 2019 
+
+**Mid-November, 2019**
