adding homepage message

--- a/_posts/2019-10-07-prebid-3.0.md
+++ b/_posts/2019-10-07-prebid-3.0.md
@@ -2,7 +2,7 @@
 layout: post
 title: Prebid.js 3.0 Major Release Announcement
 description:
-cd ..permalink: /blog/pbjs-3
+permalink: /blog/pbjs-3
 ---
 
 
