--- a/_posts/2019-12-04-ccpa.md
+++ b/_posts/2019-12-04-ccpa.md
@@ -8,10 +8,10 @@ permalink: /blog/ccpa
 
 <br>
 
-Prebid.js 2.43.0 includes a new [consent management module](/dev-docs/modules/consentManagementUsp.html) for supporting the California Consumer Privacy Act (CCPA). The IAB has generalized these guidelines to cover future regulations, referring to the feature as "US Privacy."
+Prebid.js 2.43.0 includes a new [consent management module](/dev-docs/modules/consentManagementUsp.html) for supporting the California Consumer Privacy Act (CCPA). The [IAB has generalized CCPA support](https://www.iab.com/guidelines/ccpa-framework/) to cover future regulations, referring to the feature as "US Privacy."
 
-The module works with IAB-compliant Consent Management Platforms (CMPs) to fetch an encoded string representing the user’s consent choices and make it available for adapters to consume and process.
-Bidder adapters can consider making use of the additional consent data in the header bidding auction.
+The module works with IAB-compliant Consent Management Platforms (CMPs) to fetch an encoded string representing the user’s consent choices, making it available for adapters to consume and process.
+Bidder adapters can consider making use of this additional consent data in the header bidding auction.
 
 {: .alert.alert-warning :}
 Prebid functionality created to address regulatory requirements does not replace each party’s responsibility to determine its own legal obligations and comply with all applicable laws.
