minor update per legal guidelines

--- a/_posts/2019-12-04-ccpa.md
+++ b/_posts/2019-12-04-ccpa.md
@@ -10,7 +10,7 @@ permalink: /blog/ccpa
 
 Prebid.js 2.43.0 includes a new [consent management module](/dev-docs/modules/consentManagementUsp.html) for supporting the California Consumer Privacy Act (CCPA). The [IAB has generalized CCPA support](https://www.iab.com/guidelines/ccpa-framework/) to cover future regulations, referring to the feature as "US Privacy."
 
-The module works with IAB-compliant Consent Management Platforms (CMPs) to fetch an encoded string representing the user’s consent choices, making it available for adapters to consume and process.
+The module works with supported Consent Management Platforms (CMPs) to fetch an encoded string representing the user’s consent choices, making it available for adapters to consume and process.
 Bidder adapters can consider making use of this additional consent data in the header bidding auction.
 
 {: .alert.alert-warning :}
