adding note about video.playersize

--- a/_posts/2019-10-07-prebid-3.0.md
+++ b/_posts/2019-10-07-prebid-3.0.md
@@ -46,6 +46,20 @@ You will need to define adUnits sizes like this:
                 },
 ```
 
+AdUnit.sizes should not have been used for video player size, but be aware that video requires mediaTypes.video.playerSize. e.g.
+
+```
+    var adUnits = [
+           {
+               code: 'test-div',
+                mediaTypes: {
+                    video: {
+                        playerSize: [640, 480],
+			...
+                    }
+                },
+```
+
 #### 2. The userSync API no longer supports iframeEnabled, pixelEnabled, or enabledBidders
 
 There has been a much more flexible syntax for userSync available for a long time, and it's what you need to be using now. See the [Publisher API docs](http://prebid.org/dev-docs/publisher-api-reference.html#setConfig-Configure-User-Syncing) for more details, but here's an example of the improved syntax:
