moving TCF2 reqs to website from gdoc

--- a/_posts/2020-03-12-tcf2.md
+++ b/_posts/2020-03-12-tcf2.md
@@ -19,7 +19,7 @@ References
 - [IAB Europe's TCF v2.0 Homepage](https://iabeurope.eu/tcf-2-0/)
 - [TCF Policies](https://iabeurope.eu/tcfdocuments/documents/legal/tcfpolicyFINALv2.pdf)
 - [TCF v2.0 Consent String Format](https://github.com/InteractiveAdvertisingBureau/GDPR-Transparency-and-Consent-Framework/blob/master/TCFv2/IAB%20Tech%20Lab%20-%20Consent%20string%20and%20vendor%20list%20formats%20v2.md)
-- [Prebid Support for Enforcing TCF v2.0](https://docs.google.com/document/d/1fBRaodKifv1pYsWY3ia-9K96VHUjd8kKvxZlOsozm8E/edit#)
+- [Prebid Support for Enforcing TCF v2.0](/dev-docs/requirements/tcf2/PrebidSupportforEnforcingTCF2.html)
 
 {: .alert.alert-warning :}
 **Consult with your legal counsel before determining how to utilize Prebid features in support of your overall privacy approach.**
