--- a/_posts/2020-03-12-tcf2.md
+++ b/_posts/2020-03-12-tcf2.md
@@ -33,16 +33,16 @@ The following is a summary of how various Prebid components will support TCF v2.
 | ----- | ----------- | ----------------- |
 | 1 | Support ['deviceAccess' and 'defaultGdprScope'](https://github.com/prebid/Prebid.js/issues/4747) flags. (Publishers will need to parse the TCF string on their own and configure Prebid.js appropriately.) | Mar 18, 2020 |
 | 2 | Update the GDPR ConsentManagement module to [read TCF v2.0 strings](https://github.com/prebid/Prebid.js/issues/4801) and forward to bid adapters. | Mar 18, 2020 |
-| 3 | Optionally parse TCF v2.0 strings and enforce Device Access. | Apr 1, 2020 |
-| 4 | Optionally parse TCF v2.0 strings and enforce Purposes 2 and 4 | Apr 30, 2020 |
+| 3 | Update the GDPR ConsentManagement module to support parsing TCF v2.0 strings and enforcing Device Access. | Apr 1, 2020 |
+| 4 | Update the GDPR ConsentManagement module to support parsing TCF v2.0 strings and enforcing Purposes 2 and 4 | Apr 30, 2020 |
 
 ## Prebid Server
 
 {: .table .table-bordered .table-striped }
 | Phase | Description | Est. Availability |
 | ----- | ----------- | ----------------- |
-| 1 | Support parsing the TCF v2.0 string and enforce Device Access. | Apr 1, 2020 |
-| 2 | Optionally parse TCF v2.0 strings and enforce Purposes 2, 4, 7 and Special Feature 1 | Apr 30, 2020 |
+| 1 | Support parsing the TCF v2.0 string and enforcing Device Access. | Apr 1, 2020 |
+| 2 | Support parsing TCF v2.0 strings and enforcing Purposes 2, 4, 7 and Special Feature 1 | Apr 30, 2020 |
 
 ## Prebid SDK
 
