--- a/_posts/2020-03-12-tcf2.md
+++ b/_posts/2020-03-12-tcf2.md
@@ -28,13 +28,16 @@ The following is a summary of how various Prebid components will support TCF v2.
 
 ## Prebid.js
 
+Support for TCF2 is broken into several phases:
+
 {: .table .table-bordered .table-striped }
 | Phase | Description | Est. Availability |
 | ----- | ----------- | ----------------- |
-| 1 | Support ['deviceAccess' and 'defaultGdprScope'](https://github.com/prebid/Prebid.js/issues/4747) flags. (Publishers will need to parse the TCF string on their own and configure Prebid.js appropriately.) | Mar 18, 2020 |
-| 2 | Update the GDPR ConsentManagement module to [read TCF v2.0 strings](https://github.com/prebid/Prebid.js/issues/4801) and forward to bid adapters. | Mar 18, 2020 |
-| 3 | Update the GDPR ConsentManagement module to support parsing TCF v2.0 strings and enforcing Device Access. | Apr 1, 2020 |
-| 4 | Update the GDPR ConsentManagement module to support parsing TCF v2.0 strings and enforcing Purposes 2 and 4 | Apr 30, 2020 |
+| 1 | DONE - Support a ['deviceAccess' flag](/dev-docs/publisher-api-reference.html#setConfig-deviceAccess). Publishers can parse the TCF string on their own and configure Prebid.js appropriately. | Mar 18, 2020 |
+| 2 | DONE - Update the [GDPR ConsentManagement module(/dev-docs/modules/consentManagement.html) to [read TCF v2.0 strings](https://github.com/prebid/Prebid.js/issues/4801) and forward to bid adapters. | Mar 18, 2020 |
+| 3 | Support a 'default GDPR scope' flag to allow control over scenarios where the CMP doesn't respond in time. | Mar 25, 2020 |
+| 4 | Update the GDPR ConsentManagement module to support parsing TCF v2.0 strings and enforcing Device Access. | Apr 1, 2020 |
+| 5 | Update the GDPR ConsentManagement module to support parsing TCF v2.0 strings and enforcing Purposes 2 and 4 | Apr 30, 2020 |
 
 ## Prebid Server
 
