--- a/_posts/2020-03-12-tcf2.md
+++ b/_posts/2020-03-12-tcf2.md
@@ -44,7 +44,7 @@ Support for TCF2 is broken into several phases:
 {: .table .table-bordered .table-striped }
 | Phase | Description | Est. Availability |
 | ----- | ----------- | ----------------- |
-| 1 | Support parsing the TCF v2.0 string and enforcing Device Access. | Apr 1, 2020 |
+| 1 | DONE - Support parsing the TCF v2.0 string and enforcing Device Access. | PBS-Go v0.105.0, PBS-Java v1.32 |
 | 2 | Support parsing TCF v2.0 strings and enforcing Purposes 2, 4, 7 and Special Feature 1 | Apr 30, 2020 |
 
 ## Prebid SDK
@@ -52,4 +52,4 @@ Support for TCF2 is broken into several phases:
 {: .table .table-bordered .table-striped }
 | Phase | Description | Est. Availability |
 | ----- | ----------- | ----------------- |
-| 1 | Support the 'deviceAccessConsent' flag and passing TCF v2.0 strings to Prebid Server. | Apr 1, 2020 |
+| 1 | DONE - Support the 'deviceAccessConsent' flag and passing TCF v2.0 strings to Prebid Server. | SDK v1.5 |
